# fun-fh-puzzle-03

./: README.md  default.nix  fhpuzz.cabal
app/: Main.hs
lib/: FHPuzz.hs
vibe/: prompt.txt  raybounce.py
