cabal-version: 3.0
name: fhpuzz
version: 0.1.0.0

common lib-shared -- {{{
  mixins:
    , base hiding (Prelude)
    , base-prelude (BasePrelude as Prelude)
  default-language: GHC2021
  default-extensions:
    , BlockArguments
    , DataKinds
    , DerivingStrategies
    , LambdaCase
    , RecordWildCards
    , ViewPatterns
  ghc-options: -pgmL markdown-unlit
  build-depends: base, base-prelude
    -- , array
    -- , containers
    -- , extra
    -- , lens
    -- , mtl
    -- , pcre-heavy
    -- , split
    -- , tagged
    -- , text
-- }}}

library
  import: lib-shared
  hs-source-dirs: lib
  exposed-modules: FHPuzz
  build-depends:
    , diagrams-lib, diagrams-svg
    , lens
    , linear

executable fhpuzz-exe
  import: lib-shared
  main-is: Main.hs
  hs-source-dirs: app
  build-depends: fhpuzz
